{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MouseObjects",
            "id": "f84e1229-141a-4e72-aaec-46b71e0db778",
            "actions": [
                {
                    "name": "MouseLeft",
                    "type": "Value",
                    "id": "1881faf0-050c-4f5a-9f7e-9cd587a94057",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRight",
                    "type": "Button",
                    "id": "ce061f99-1b9a-449a-860c-0b38156ff893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d58b146-83f5-46c3-b319-78f0610847a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b448da4-06e9-4b82-a6e4-c149c164a7fa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}